# crypto

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  trading.yaml
data-historical/: 1INCH_BTC_1d.csv  1INCH_EUR_1d.csv  1INCH_GBP_1d.csv  1INCH_USD_1d.csv  AAVE_BTC_1d.csv  AAVE_EUR_1d.csv  AAVE_GBP_1d.csv  AAVE_USD_1d.csv  ACH_USD_1d.csv  ADA_BTC_1d.csv  ADA_ETH_1d.csv  ADA_EUR_1d.csv  ADA_GBP_1d.csv  ADA_USDC_1d.csv  ADA_USD_1d.csv  AGLD_USDT_1d.csv  AGLD_USD_1d.csv  ALGO_BTC_1d.csv  ALGO_EUR_1d.csv  ALGO_GBP_1d.csv  ALGO_USD_1d.csv  AMP_USD_1d.csv  ANKR_BTC_1d.csv  ANKR_EUR_1d.csv  ANKR_GBP_1d.csv  ANKR_USD_1d.csv  ARPA_EUR_1d.csv  ARPA_USDT_1d.csv  ARPA_USD_1d.csv  ASM_USDT_1d.csv  ASM_USD_1d.csv  ATOM_BTC_1d.csv  ATOM_USD_1d.csv  AUCTION_EUR_1d.csv  AUCTION_USDT_1d.csv  AUCTION_USD_1d.csv  AVAX_EUR_1d.csv  AVAX_USDT_1d.csv  AVAX_USD_1d.csv  AXS_BTC_1d.csv  (+291 more)
experiments/exp_data_download/: README.md  __init__.py  data_download.py
experiments/exp_hello_world/: __init__.py  experiment.py
experiments/exp_hello_world/notebooks/: sample_notebook.ipynb  trading_api-Gemini.ipynb  trading_api.ipynb
experiments/exp_trading_intro/: experiment.py
src/crypto/: console.py
src/crypto/utils/: config_utils.py
tests/utils/: test_config_utils.py
